--- a/htmlCssDom/eMoney/style.css
+++ b/htmlCssDom/eMoney/style.css
@@ -5,12 +5,12 @@ body {
 #eMoney-logo {
     width: 20%;
 }
-
+/*
 .links {
-    /*display: flex;*/
+    display: flex;
 
 }
-
+*/
 #mag-glass {
     width: 10px;
 }
@@ -27,17 +27,40 @@ body {
     align-content: space-around;
 
 }
-nav-container{
+/*
+
+.nav-container{
     z-index: 1;
     display: flex;
     z-index: 10;
     justify-content: flex-start;
 }
-
+*/
 
 video {
-    z-index: -10;
-    position: absolute;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
 }
 
+.nav-container {
+    text-align: center;
+    font-size: 6rem;
+    background-color: rgb(255, 255, 255, .2);
+    padding: 10px;
+    margin: 10px;
+    z-index: 1;
+}
 
+.video-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: -1;
+
+}
