--- a/apis/apiWalkthrough/style.css
+++ b/apis/apiWalkthrough/style.css
@@ -20,7 +20,7 @@
 .sub-containers {
     font-size: .6em;
     padding: 10px;
-    margin: auto; 
+    margin: 10px; 
     border: solid black 2px; 
     border-radius: 25px 50px 30px; 
     width: 85%; 
